--- a/assignment/package.json
+++ b/assignment/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "pnotify": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.1",
